# familytree

./: README.md  angular.json  flake.nix  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: rust.yml
src/: App.svelte  global.scss  index.html  main.ts  styles.scss  util.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: gen_service.rs  main.rs
src-tauri/src/gen_service/: gen.rs  gen_data.rs
src/app/: app.component.html  app.component.scss  app.component.ts  app.module.ts  gen.service.ts
src/app/curtain-panel/: curtain-panel.component.html  curtain-panel.component.scss  curtain-panel.component.ts
src/app/curtain-panel/gen-editor/: gen-editor.component.html  gen-editor.component.scss  gen-editor.component.ts
src/app/curtain-panel/gen-info/: gen-info.component.html  gen-info.component.scss  gen-info.component.ts
src/app/curtain-panel/template-editor/: template-editor.component.html  template-editor.component.scss  template-editor.component.ts
src/app/graph/: graph.component.html  graph.component.scss  graph.component.ts  mousedraggable.directive.ts
src/app/icon-svg/: icon-svg.component.ts
src/app/logo-svg/: logo-svg.component.scss  logo-svg.component.ts
src/app/relational/: relational.component.html  relational.component.scss  relational.component.ts
src/app/util/: button-class.ts
src/lib/components/: CurtainPanel.svelte  Floating.svelte  Graph.svelte  Relational.svelte
src/lib/store/: gen.ts
src/lib/util/: button-class.ts
(+17 files in other folders)
